--- a/app/src/main/translations/en.yaml
+++ b/app/src/main/translations/en.yaml
@@ -8,8 +8,8 @@ settings_filter_expensive: Hide expensive and further stations
 settings_filter_expensive_summary: Do not show an station if another nearer and cheaper exist. (Recommended)
 settings_filter_non_public: Show only public prices
 settings_filter_non_public_summary: Hide prices requiring membership or anything else.
-settings_filter_closed: Filtra estacions tancades
-settings_filter_closed_summary: Poden donar un marge de temps a les que obren aviat
+settings_filter_closed: Show closed stations
+settings_filter_closed_summary: Set a time margin for stations that will open soon
 settings_filter_closed_tolerance_none: No margin, always filter
 settings_filter_closed_tolerance_half_hour: Half an hour
 settings_filter_closed_tolerance_one_hour: One hour
