--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,10 +25,12 @@
     <string name="detail_location">Location</string>
     <string name="detail_opening_hours">Hours</string>
     <string name="detail_other_products">Other Products</string>
-    <string name="item_no_name">Unnamed</string>
-    <string name="item_no_address">No address</string>
-    <string name="item_no_city">No city</string>
-    <string name="station_status_unknown">Closed??</string>
+    <string name="station_no_name">Unnamed</string>
+    <string name="station_no_address">No address</string>
+    <string name="station_no_city">No city</string>
+    <string name="station_no_price">N/A</string>
+    <string name="station_no_distance">\?? km</string>
+    <string name="station_status_unknown">Closed\?\?</string>
     <string name="station_status_permanently_closed">Permanently closed</string>
     <string name="station_status_closed">Closed</string>
     <string name="station_status_opens_at">Opens %s</string>
