--- a/app/src/main/translations/es.yaml
+++ b/app/src/main/translations/es.yaml
@@ -35,3 +35,8 @@ station_status_opens_at: Abre %s
 station_status_closes_at: Cierra %s
 station_status_open: Abierto
 station_status_247: 24h
+warning_location_not_available: No se detectó la ubicación; usando Madrid por defecto.
+warning_location_error: Error detectando la ubicación; usando Madrid por defecto.
+warning_location_forbidden: Denegado acceso a la ubicación; usando Madrid por defecto.
+refreshing_data: Se estan actualitzando los datos...
+failed_download: "Ha fallado la descarga de datos: %s"
