--- a/app/src/main/translations/es.yaml
+++ b/app/src/main/translations/es.yaml
@@ -34,7 +34,7 @@ station_status_closed: Cerradp
 station_status_opens_at: Abre %s
 station_status_closes_at: Cierra %s
 station_status_open: Abierto
-station_status_247: 24h
+station_status_247: Abierto 24h
 warning_location_not_available: No se detectó la ubicación; usando Madrid por defecto.
 warning_location_error: Error detectando la ubicación; usando Madrid por defecto.
 warning_location_forbidden: Denegado acceso a la ubicación; usando Madrid por defecto.
