--- a/app/src/main/translations/en.yaml
+++ b/app/src/main/translations/en.yaml
@@ -40,3 +40,4 @@ warning_location_error: Error detecting location; using Madrid as default.
 warning_location_forbidden: Location access denied; using Madrid as default.
 refreshing_data: Refreshing data...
 failed_download: "Download failed: %s"
+open_in_maps: Open in a map
