--- a/app/src/main/translations/ca.yaml
+++ b/app/src/main/translations/ca.yaml
@@ -18,7 +18,8 @@ settings_filter_closed_tolerance_twelve_hours: Mig dia
 settings_filter_closed_tolerance_one_day: Un dia
 settings_filter_closed_tolerance_never: Mostra sempre
 no_gas_stations: No han estat trobades estacions de servei amb l'actual criteri
-product: Producte
+product_selector_hint: Producte
+product_selector_icon_description: Selector de producte
 price_not_public: ✱ Preu condicionat
 detail_location: Ubicació
 detail_opening_hours: Horari de servei
