--- a/app/src/main/translations/en.yaml
+++ b/app/src/main/translations/en.yaml
@@ -18,7 +18,8 @@ settings_filter_closed_tolerance_twelve_hours: Half a day
 settings_filter_closed_tolerance_one_day: A day
 settings_filter_closed_tolerance_never: Show always
 no_gas_stations: No matching gas station
-product: Product
+product_selector_hint: Product
+product_selector_icon_description: Product selector
 price_not_public: ✱ Conditional price
 detail_location: Location
 detail_opening_hours: Hours
