♻️ extract messages to new location helper

--- a/app/src/main/translations/ca.yaml
+++ b/app/src/main/translations/ca.yaml
@@ -36,9 +36,9 @@ station_status_opens_at: Obre %s
 station_status_closes_at: Tanca %s
 station_status_open: Obert
 station_status_247: Obert 24h
-warning_location_not_available: Ubicació no detectada; fent servir Madrid.
-warning_location_error: S'ha produit un error en obtindre la ubicació; fent servir Madrid.
-warning_location_forbidden: No s'ha donat permisos per obtindre la ubicació; fent servir Madrid.
+location_not_available: Ubicació no detectada; fent servir Madrid.
+location_error: S'ha produit un error en obtindre la ubicació; fent servir Madrid.
+location_forbidden: No s'ha donat permisos per obtindre la ubicació; fent servir Madrid.
 refreshing_data: S'estan actualitzant les dades...
 failed_download: "Ha fallat la descarrega de dades: %s"
 open_in_maps: Obre al mapa
