--- a/app/src/main/translations/es.yaml
+++ b/app/src/main/translations/es.yaml
@@ -36,9 +36,9 @@ station_status_opens_at: Abre %s
 station_status_closes_at: Cierra %s
 station_status_open: Abierto
 station_status_247: Abierto 24h
-warning_location_not_available: No se detectó la ubicación; usando Madrid por defecto.
-warning_location_error: Error detectando la ubicación; usando Madrid por defecto.
-warning_location_forbidden: Denegado acceso a la ubicación; usando Madrid por defecto.
+location_not_available: No se detectó la ubicación; usando Madrid por defecto.
+location_error: Error detectando la ubicación; usando Madrid por defecto.
+location_forbidden: Denegado acceso a la ubicación; usando Madrid por defecto.
 refreshing_data: Se estan actualitzando los datos...
 failed_download: "Ha fallado la descarga de datos: %s"
 open_in_maps: Abre en el mapa
