✨ several location ergonomy features
- Save the last successful device location
- If available, set the last successful location as fallback instead Madrid
- Detecting when location is allowed but disabled
- If disabled suggest action to enable
- If forbidden suggest action to allow

--- a/app/src/main/res/values-ca/strings.xml
+++ b/app/src/main/res/values-ca/strings.xml
@@ -4,6 +4,7 @@
     <string name="language_name">Català</string>
     <string name="app_name">Carburoid</string>
     <string name="menu_settings">Configuració</string>
+    <string name="settings_category_language_apperance">Llengua i aparença</string>
     <string name="settings_language_title">Llengua</string>
     <string name="settings_language_summary">Canvia la llengua de l\'aplicació</string>
     <string name="language_system_default">Sistema</string>
@@ -11,20 +12,21 @@
     <string name="theme_light">Clar</string>
     <string name="theme_dark">Fosc</string>
     <string name="theme_system">Automàtic (El del sistema)</string>
-    <string name="settings_filter_expensive">Oculta estacions cares i llunyanes</string>
-    <string name="settings_filter_expensive_summary">No mostris estacions si n\'hi ha de més properes o barates. (Recomanat)</string>
+    <string name="settings_category_station_filters">Filtrat de benzineres</string>
+    <string name="settings_filter_expensive">Oculta les cares i llunyanes</string>
+    <string name="settings_filter_expensive_summary">No les mostris si n\'hi ha de més properes o barates. (Recomanat)</string>
     <string name="settings_filter_non_public">Només preus públics</string>
     <string name="settings_filter_non_public_summary">Oculta preus que demanin afiliació.</string>
-    <string name="settings_filter_closed">Mostra estacions tancades</string>
+    <string name="settings_filter_closed">Mostra tancades si obren</string>
     <string name="settings_filter_closed_summary">Establir un marge de temps per estacions que obriran aviat</string>
     <string name="settings_filter_closed_tolerance_none">Sense marge, oculta sempre</string>
-    <string name="settings_filter_closed_tolerance_half_hour">Mitja hora</string>
-    <string name="settings_filter_closed_tolerance_one_hour">Una hora</string>
-    <string name="settings_filter_closed_tolerance_two_hours">Dues hores</string>
-    <string name="settings_filter_closed_tolerance_twelve_hours">Mig dia</string>
-    <string name="settings_filter_closed_tolerance_one_day">Un dia</string>
+    <string name="settings_filter_closed_tolerance_half_hour">En mitja hora</string>
+    <string name="settings_filter_closed_tolerance_one_hour">En una hora</string>
+    <string name="settings_filter_closed_tolerance_two_hours">En dues hores</string>
+    <string name="settings_filter_closed_tolerance_twelve_hours">En mig dia</string>
+    <string name="settings_filter_closed_tolerance_one_day">En un dia</string>
     <string name="settings_filter_closed_tolerance_never">Mostra sempre</string>
-    <string name="no_gas_stations">No han estat trobades estacions de servei amb l\'actual criteri</string>
+    <string name="no_gas_stations">No s\'han trobat benzineres coincidents</string>
     <string name="product_selector_hint">Producte</string>
     <string name="product_selector_icon_description">Selector de producte</string>
     <string name="price_not_public">✱ Preu condicionat</string>
@@ -46,6 +48,9 @@
     <string name="location_not_available">Ubicació no detectada; fent servir Madrid.</string>
     <string name="location_error">S\'ha produit un error en obtindre la ubicació; fent servir Madrid.</string>
     <string name="location_forbidden">No s\'ha donat permisos per obtindre la ubicació; fent servir Madrid.</string>
+    <string name="location_deactivated">La ubicació està desactivada</string>
+    <string name="location_activate">Activa</string>
+    <string name="location_permisions_concede">Permet</string>
     <string name="refreshing_data">S\'estan actualitzant les dades…</string>
     <string name="failed_download">Ha fallat la descarrega de dades: %s</string>
     <string name="open_in_maps">Obre al mapa</string>
