--- a/app/src/main/res/values-an/strings.xml
+++ b/app/src/main/res/values-an/strings.xml
@@ -4,6 +4,7 @@
     <string name="language_name">Aragonés</string>
     <string name="app_name">Carburoid</string>
     <string name="menu_settings">Configuración</string>
+    <string name="settings_category_language_apperance">Luenga y apariencia</string>
     <string name="settings_language_title">Idioma</string>
     <string name="settings_language_summary">Cambia l\'idioma de l\'aplicación</string>
     <string name="language_system_default">Sistema</string>
@@ -46,6 +47,9 @@
     <string name="location_not_available">Ubicación no detectada; fendo servir Madrid.</string>
     <string name="location_error">S\'ha produciu un error en obtener a ubicación; fendo servir Madrid.</string>
     <string name="location_forbidden">No s\'ha dato permiso pa obtener a ubicación; fendo servir Madrid.</string>
+    <string name="location_deactivated">A ubicación ye desactivada</string>
+    <string name="location_activate">Activa</string>
+    <string name="location_permisions_concede">Permite</string>
     <string name="refreshing_data">S\'están actualizando las datos…</string>
     <string name="failed_download">Ha fallau a descarga de datos: %s</string>
     <string name="open_in_maps">Ubrir en o mapa</string>
