--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="language_name">English</string>
     <string name="app_name">Carburoid</string>
     <string name="menu_settings">Settings</string>
+    <string name="settings_category_language_apperance">Language and apperance</string>
     <string name="settings_language_title">Language</string>
     <string name="settings_language_summary">Change the app language</string>
     <string name="language_system_default">System default</string>
@@ -11,6 +12,7 @@
     <string name="theme_light">Light</string>
     <string name="theme_dark">Dark</string>
     <string name="theme_system">Auto (System Default)</string>
+    <string name="settings_category_station_filters">Station filters</string>
     <string name="settings_filter_expensive">Hide expensive and further stations</string>
     <string name="settings_filter_expensive_summary">Do not show an station if another nearer and cheaper exist. (Recommended)</string>
     <string name="settings_filter_non_public">Show only public prices</string>
@@ -43,9 +45,12 @@
     <string name="station_status_closes_at">Closes %s</string>
     <string name="station_status_open">Open</string>
     <string name="station_status_247">24-7</string>
-    <string name="location_not_available">No location detected; using Madrid as default.</string>
-    <string name="location_error">Error detecting location; using Madrid as default.</string>
-    <string name="location_forbidden">Location access denied; using Madrid as default.</string>
+    <string name="location_not_available">Unable to get locations. Using fallback</string>
+    <string name="location_error">Error detecting location; using Madrid as default</string>
+    <string name="location_forbidden">Location access denied; using Madrid as default</string>
+    <string name="location_deactivated">Location is disabled</string>
+    <string name="location_activate">Enable</string>
+    <string name="location_permisions_concede">Allow</string>
     <string name="refreshing_data">Refreshing data…</string>
     <string name="failed_download">Download failed: %s</string>
     <string name="open_in_maps">Open in a map</string>
