--- a/app/src/main/translations/ca.yaml
+++ b/app/src/main/translations/ca.yaml
@@ -43,9 +43,9 @@ station_status_opens_at: Obre %s
 station_status_closes_at: Tanca %s
 station_status_open: Obert
 station_status_247: Obert 24h
-location_not_available: Ubicació no detectada; fent servir Madrid.
-location_error: S'ha produit un error en obtindre la ubicació; fent servir Madrid.
-location_forbidden: No s'ha donat permisos per obtindre la ubicació; fent servir Madrid.
+location_not_available: Ubicació no detectada
+location_error: S'ha produit un error en obtindre la ubicació
+location_forbidden: No tenim permís per obtindre la ubicació
 location_deactivated: La ubicació està desactivada
 location_activate: Activa
 location_permisions_concede: Permet
