--- a/app/src/main/translations/es.yaml
+++ b/app/src/main/translations/es.yaml
@@ -10,14 +10,13 @@ settings_theme: Tema
 theme_light: Claro
 theme_dark: Oscuro
 theme_system: Automático (Sistema)
+settings_category_station_filters: Filtrado de gasolineras
 settings_filter_expensive: Oculta estaciones caras i lejanas
-settings_filter_expensive_summary: No muestres estaciones cuando las haya más 
-  cercanas o más baratas. (Recomendado)
+settings_filter_expensive_summary: No muestres estaciones cuando las haya más cercanas o más baratas. (Recomendado)
 settings_filter_non_public: Solo precios públicos
 settings_filter_non_public_summary: Oculta los precios que requieran afiliación.
 settings_filter_closed: Muestra estaciones cerradas
-settings_filter_closed_summary: Establece un margen de tiempo para estaciones 
-  que abrirán pronto
+settings_filter_closed_summary: Establece un margen de tiempo para estaciones que abrirán pronto
 settings_filter_closed_tolerance_none: Sin margen, filtra siempre
 settings_filter_closed_tolerance_half_hour: Media hora
 settings_filter_closed_tolerance_one_hour: Una hora
@@ -28,6 +27,8 @@ settings_filter_closed_tolerance_never: Mstra sempre
 no_gas_stations: No se encontraron gasolineras coincidentes
 product_selector_hint: Producto
 product_selector_icon_description: Selector de producto
+location_selector_hint: Ubicación
+location_selector_locate_device: Ubica el dispositivo
 price_not_public: ✱ Precio condicionado
 detail_location: Ubicación
 detail_opening_hours: Horario de servicio
@@ -53,4 +54,3 @@ location_permisions_concede: Permite
 refreshing_data: Se estan actualitzando los datos…
 failed_download: "Ha fallado la descarga de datos: %s"
 open_in_maps: Abre en el mapa
-settings_category_station_filters: Filtrado de gasolineras
