--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="language_name">English</string>
     <string name="app_name">Carburoid</string>
     <string name="menu_settings">Settings</string>
-    <string name="settings_category_language_apperance">Language and apperance</string>
+    <string name="settings_category_language_appearance">Language and appearance</string>
     <string name="settings_language_title">Language</string>
     <string name="settings_language_summary">Change the app language</string>
     <string name="language_system_default">System default</string>
