--- a/app/src/main/translations/es.yaml
+++ b/app/src/main/translations/es.yaml
@@ -2,7 +2,7 @@ language_code: es
 language_name: Español
 app_name: Carburoid
 menu_settings: Ajustes
-settings_category_language_apperance: Idioma y apariencia
+settings_category_language_appearance: Idioma y apariencia
 settings_language_title: Idioma
 settings_language_summary: Canvia el idioma de la aplicación
 language_system_default: Sistema
@@ -21,9 +21,9 @@ settings_filter_closed_tolerance_none: Sin margen, filtra siempre
 settings_filter_closed_tolerance_half_hour: Media hora
 settings_filter_closed_tolerance_one_hour: Una hora
 settings_filter_closed_tolerance_two_hours: Dos hores
-settings_filter_closed_tolerance_twelve_hours: Medio dia
-settings_filter_closed_tolerance_one_day: Un dia
-settings_filter_closed_tolerance_never: Mstra sempre
+settings_filter_closed_tolerance_twelve_hours: Medio día
+settings_filter_closed_tolerance_one_day: Un día
+settings_filter_closed_tolerance_never: Muestra sempre
 no_gas_stations: No se encontraron gasolineras coincidentes
 product_selector_hint: Producto
 product_selector_icon_description: Selector de producto
@@ -51,6 +51,6 @@ location_forbidden: Denegado acceso a la ubicación
 location_deactivated: La ubicación está desactivada
 location_activate: Activa
 location_permisions_concede: Permite
-refreshing_data: Se estan actualitzando los datos…
+refreshing_data: Se están actualitzando los datos…
 failed_download: "Ha fallado la descarga de datos: %s"
 open_in_maps: Abre en el mapa
